# twseAPI

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
source/: callbacks.cpp  callbacks.hpp  curlopt.cpp  main.cpp  main.h
